fixed overflow kindof

--- a/javaScript_site/style.css
+++ b/javaScript_site/style.css
@@ -1,6 +1,5 @@
 body{
     background-color: rgb(39, 40, 49);
-    display: block;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding-right: 15px;
@@ -17,6 +16,7 @@ a:hover{
 }
 
 .sidebar{
+    color: rgb(149, 221, 250);
     z-index: 999;
     width: 200px;
     background-color: rgb(39, 40, 49);
@@ -27,20 +27,18 @@ a:hover{
     bottom: 0rem;
     padding: 30px 3px 0px 3px;
     display: flex;
-    margin: 5px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
 button{
     color: rgba(255, 255, 255, 0.7);
     margin: 2px; 
-    padding:2px;
+    padding:10px;
     border: 2px solid grey;
     background-color: transparent;
     width: 175px;
-    height: 35px;
+    height: 45px;
     
 }
 
@@ -87,15 +85,14 @@ button:hover{
 .textContainer{
     border-radius: 10px 0px 0px 0px;
     border: 2px solid grey;
-    text-overflow: wrap;
-    text-align: left;
     font-size: 1.2rem;
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
-    width: auto;
     padding: 20px;
     margin: 20px 0px 0px 10px;
     background: rgba(255, 255, 255, 0.7);
+    overflow-x: auto;
 }
 
 #box{
